--- a/TaskPlanning/src/main/frontend/package.json
+++ b/TaskPlanning/src/main/frontend/package.json
@@ -6,7 +6,8 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "dhtmlx-gantt": "^7.1.9",
+    "axios": "^0.26.1",
+    "dhtmlx-gantt": "^7.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
