drag event listener functional on backend

--- a/TaskPlanning/src/main/resources/application.properties
+++ b/TaskPlanning/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=9091
 spring.profiles.active=prod
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
